public class Inventario implements LivroState {
    public void regista(Livro livro) {
        livro.setState(new Disponivel());
    }
    
    public void requesita(Livro livro) {
        printError();
    }

    public void devolve(Livro livro) {
        printError();
    }

    public void reserva(Livro livro) {
        printError();
    }

    public void cancelaReserva(Livro livro) {
        printError();
    }

    @Override
    public String toString() {
        return "Inventario";
    }

    private void printError() {
        System.err.println("Operação não disponível");
    }
}
